Fix FXML loading issue